--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  <main>
+    <img src="./assets/images/avatar-jessica.jpeg" alt="black woman with an afro" class="image">
+    <h2 class="name text-preset-1 spacing-300">Jessica Randall</h2>
+    <span class="location">London, United Kingdom</span>
+    <p class="description spacing-300">"Front-end developer and avid reader."</p>
+    <ul>
+      <li><a href="#" class="links">GitHub</a></li>
+      <li><a href="#" class="links">Frontend Mentor</a></li>
+      <li><a href="#" class="links">LinkedIn</a></li>
+      <li><a href="#" class="links">Twitter</a></li>
+      <li><a href="#" class="links">Instagram</a></li>
+    </ul>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
