social Links profile | mobile done

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
 
   <main>
     <img src="./assets/images/avatar-jessica.jpeg" alt="black woman with an afro" class="image">
-    <h2 class="name text-preset-1 spacing-300">Jessica Randall</h2>
-    <span class="location">London, United Kingdom</span>
-    <p class="description spacing-300">"Front-end developer and avid reader."</p>
-    <ul>
-      <li><a href="#" class="links">GitHub</a></li>
-      <li><a href="#" class="links">Frontend Mentor</a></li>
-      <li><a href="#" class="links">LinkedIn</a></li>
-      <li><a href="#" class="links">Twitter</a></li>
-      <li><a href="#" class="links">Instagram</a></li>
-    </ul>
+    <div class="content text-spacing">
+      <h2 class="name text-preset-1">Jessica Randall</h2>
+      <span class="location text-preset-2-bold">London, United Kingdom</span>
+      <p class="description text-preset-2">"Front-end developer and avid reader."</p>
+    </div>
+
+      <div class="buttonContainer">
+        <button class="buttons spacing-200">GitHub</button>
+        <button class="buttons spacing-200">Frontend Mentor</button>
+        <button class="buttons spacing-200">LinkedIn</button>
+        <button class="buttons spacing-200">Twitter</button>
+        <button class="buttons">Instagram</button>
+      </div>
   </main>
   
   <div class="attribution">
