--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   </main>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io/solutions/social-links-profile-v2-Aj1cbtxH1y" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://linktr.ee/romeocodes">RomeoCodes | Contact Me</a>.
   </div>
 </body>
 </html>
